intégration svg au html + correction wrap index

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,3 +1,5 @@
+//fonts
+
 @font-face
     // medium
     font-family: "Segoe Print"
@@ -39,9 +41,9 @@ $secundary-color: #fccb45
 $main-font: "Montserrat"
 // couleur fond, police titre, police sous-titre, couleur texte 1, couleur texte 2
 $la_note_enchantee: rgb(247,224,220), "Devonshire", "Segoe Print", rgb(56,22,26)
-$le_chic_a_la_francaise: rgb(248, 221, 246), "Kurale", "Abril Fatface"
-$la_palette_du_gout: #ffffff, "Kaushan Script", "Segoe Print"
-$le_delice_des_papilles: #eceeee, "Dancing Script", "Segoe Print"
+$le_chic_a_la_francaise: rgb(253, 245, 253), "Kurale", "Abril Fatface"
+$le_delice_des_papilles: rgb(249, 249, 249), "Dancing Script", "Segoe Print"
+$la_palette_du_gout: rgb(253, 255, 253), "Kaushan Script", "Segoe Print"
 
 body
     margin: 0
@@ -68,22 +70,32 @@ main
     display: flex
     width: 80%
     margin: auto
-    margin-bottom: 7rem
-    margin-top: 1rem
-    flex-direction: column
-    align-items: center
-    justify-content: center   
+
+.page-menu
+    main
+        flex-direction: column
+        align-items: center
+        justify-content: center
+        margin-bottom: 7rem
 
 .menus
-    width: 400px
+    width: 255px
     height: 400px
-    box-shadow: 1px 1px 10px grey
+    box-shadow: 1px 1px 15px 0px rgba(0,0,0,0.2)
     display: flex
     justify-content: center
     align-items: center
     flex-direction: column
-    margin: 20px
     font-size: 2rem
+    margin: 0 0 3rem 1rem
+    h2
+        font-weight: normal
+        margin: 0
+        font-size: 1.5rem
+    p
+        margin: 0
+        margin-top: 1rem
+        font-size: 1.5rem
     &__la_note_enchantee
         background-color: nth($la_note_enchantee, 1)
         font-family: nth($la_note_enchantee, 2)
@@ -132,13 +144,12 @@ main
         p
             font-family: nth($la_palette_du_gout, 3)
             color: #3d923a
-    h2
-        font-weight: normal
 
 .btn
     background-color: $primary-color
-    border-radius: 1rem
+    border-radius: 0.5rem
     margin: 1.5rem
+    margin-top: 0
     padding: 0.5rem 2rem
     font-size: 1.75rem
     p
@@ -153,11 +164,24 @@ main
     padding: 2rem 10%
     font-size: 0.70rem
     &__titre
-        margin: auto
+        display: flex
+        flex-direction: column
+        align-items: center
+        margin-top: 1rem
+        .croche
+            width: 3.5rem
     &__header
         color: rgb(53, 53, 53)
         font-family: "Helvetica Neue"
         font-size: 1.25rem
+        margin-top: 1rem
+    &__rappel
+        display: flex
+        flex-direction: row
+        justify-content: center
+        margin-bottom: 1rem
+        .croche
+            width: 2rem
     h2
         margin: 1rem
     h3
@@ -169,7 +193,7 @@ main
     h4
         @extend h3
         font-size: 1.5rem
-        margin: 0
+        margin: 0 0.5rem
     h5
         font-size: 1rem
         margin: 0
@@ -180,7 +204,7 @@ main
     li
         display: flex
         justify-content: space-between
-        margin: 0.5rem
+        margin: 0.5rem 0
     span
         display: block
         font-family: "Segoe Print"
@@ -188,6 +212,28 @@ main
     article
         margin-bottom: 3rem
 
+.plat-titre
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: space-between
+    .barre
+        width: 33%
+        fill: rgb(56,22,26)
+
+.page-accueil
+    main
+        flex-direction: column
+        align-items: center
+        margin-top: 3rem
+        margin-bottom: 5rem
+    section
+        display: flex
+        justify-content: space-between
+        flex-wrap: wrap
+    .croche
+        width: 30px
+        
 footer
     @extend header
     width: 100%
